// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiResizableContainer can adjust button spacing 1`] = `
<div
  aria-label="aria-label"
  class="wuiResizableContainer wuiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="wuiResizablePanel"
    id="generated-id"
    style="width:50%;height:100%;min-width:0px;min-height:0"
  >
    Testing
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="wuiResizableButton wuiResizableButton--sizeSmall wuiResizableButton--horizontal"
    data-test-subj="splitPanelResizer"
    type="button"
  />
  <div
    class="wuiResizablePanel"
    id="generated-id"
    style="width:50%;height:100%;min-width:0px;min-height:0"
  >
    123
  </div>
</div>
`;

exports[`WuiResizableContainer can be controlled externally 1`] = `
<div
  aria-label="aria-label"
  class="wuiResizableContainer wuiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="wuiResizablePanel"
    id="generated-id"
    style="width:50%;height:100%;min-width:0px;min-height:0"
  >
    Testing
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="wuiResizableButton wuiResizableButton--sizeMedium wuiResizableButton--horizontal"
    data-test-subj="splitPanelResizer"
    type="button"
  />
  <div
    class="wuiResizablePanel"
    id="generated-id"
    style="width:50%;height:100%;min-width:0px;min-height:0"
  >
    123
  </div>
</div>
`;

exports[`WuiResizableContainer can be vertical 1`] = `
<div
  aria-label="aria-label"
  class="wuiResizableContainer wuiResizableContainer--vertical testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="wuiResizablePanel"
    id="generated-id"
    style="width:100%;height:50%;min-width:0;min-height:0px"
  >
    Testing
  </div>
  <button
    aria-label="Press up or down to adjust panels size"
    class="wuiResizableButton wuiResizableButton--sizeMedium wuiResizableButton--vertical"
    data-test-subj="splitPanelResizer"
    type="button"
  />
  <div
    class="wuiResizablePanel"
    id="generated-id"
    style="width:100%;height:50%;min-width:0;min-height:0px"
  >
    123
  </div>
</div>
`;

exports[`WuiResizableContainer can have more than two panels 1`] = `
<div
  aria-label="aria-label"
  class="wuiResizableContainer wuiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="wuiResizablePanel"
    id="generated-id"
    style="width:33%;height:100%;min-width:0px;min-height:0"
  >
    Testing
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="wuiResizableButton wuiResizableButton--sizeMedium wuiResizableButton--horizontal"
    data-test-subj="splitPanelResizer"
    type="button"
  />
  <div
    class="wuiResizablePanel"
    id="generated-id"
    style="width:33%;height:100%;min-width:0px;min-height:0"
  >
    123
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="wuiResizableButton wuiResizableButton--sizeMedium wuiResizableButton--horizontal"
    data-test-subj="splitPanelResizer"
    type="button"
  />
  <div
    class="wuiResizablePanel"
    id="generated-id"
    style="width:33%;height:100%;min-width:0px;min-height:0"
  >
    And again
  </div>
</div>
`;

exports[`WuiResizableContainer can have scrollable panels 1`] = `
<div
  aria-label="aria-label"
  class="wuiResizableContainer wuiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="wuiResizablePanel"
    id="generated-id"
    style="width:50%;height:100%;min-width:0px;min-height:0"
  >
    Testing
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="wuiResizableButton wuiResizableButton--sizeMedium wuiResizableButton--horizontal"
    data-test-subj="splitPanelResizer"
    type="button"
  />
  <div
    class="wuiResizablePanel"
    id="generated-id"
    style="width:50%;height:100%;min-width:0px;min-height:0"
  >
    123
  </div>
</div>
`;

exports[`WuiResizableContainer is rendered 1`] = `
<div
  aria-label="aria-label"
  class="wuiResizableContainer wuiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="wuiResizablePanel"
    id="generated-id"
    style="width:50%;height:100%;min-width:0px;min-height:0"
  >
    Testing
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="wuiResizableButton wuiResizableButton--sizeMedium wuiResizableButton--horizontal"
    data-test-subj="splitPanelResizer"
    type="button"
  />
  <div
    class="wuiResizablePanel"
    id="generated-id"
    style="width:50%;height:100%;min-width:0px;min-height:0"
  >
    123
  </div>
</div>
`;
